update เนื้อหาใน blog

--- a/posts/2023-01-06-github/index.qmd
+++ b/posts/2023-01-06-github/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "What's GitHub?"
 author: "สิวะโชติ ศรีสุทธิยากร"
-date: "2023-01-04"
+date: "2023-01-06"
 categories: [GitHub]
 toc: true
 ---
@@ -33,7 +33,7 @@ version control เป็นโปรแกรม/ระบบที่ช่ว
 ก่อนที่จะกล่าวถึงการใช้งาน GitHub ผู้อ่านควรรู้จัก Git และความเหมือน/แตกต่างระหว่าง GitHub และ Git เสียก่อน รายละเอียดมีดังนี้
 
 | GitHub                                                                                                                 | Git                                                                                                  |
-|:-----------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------------------------|
+|:--------------------------------------|:--------------------------------|
 | เป็น version control software ที่พัฒนาต่อยอดจาก Git และใช้งานจะใช้งานบน cloud จุดนี้ทำให้ GitHub สามารถใช้งานร่วมกันเป็นทีมได้อย่างสะดวก | เป็น version control software ใช้งานบนเครื่องคอมพิวเตอร์ของผู้ใช้                                             |
 | ใช้งานผ่าน web application/ desktop application ที่พัฒนาต่อยอดจาก Git กล่าวคือเราไม่สามารถใช้งาน GitHub ได้โดยปราศจาก Git         | ผู้ใช้สามารถใช้ git ได้โดยเป็นอิสระจาก GitHub หรือ cloud hosting platform อื่น ๆ                               |
 | การใช้งานมีทั้ง visual menu และ code-based มีการออกแบบการใช้งานที่ง่ายต่อการบริหารจัดการ                                           | การใช้งานเป็นลักษณะ code-based ซึ่งทำให้เหมาะสำหรับ developer ที่ถนัดการเขียน code แต่สำหรับบุคคลทั่วไปอาจใช้งานได้ยาก |
@@ -46,3 +46,19 @@ version control เป็นโปรแกรม/ระบบที่ช่ว
 # Repository
 
 Repository เป็นเหมือน folder สำหรับเก็บไฟล์งานของโปรเจค อย่างไรก็ตาม repository มีความแตกต่างจาก folder บนเครื่องคอมพิวเตอร์ปกติคือ repository ไม่เพียงแต่เก็บไฟล์งานใน version ล่าสุดเท่านั้น แต่จะบันทึกการเปลี่ยนแปลงของไฟล์งานในแต่ละ version ไว้ด้วย ผู้ใช้งาน GitHub จะมี repository ที่อยู่บน cloud ซึ่งจะเรียกว่า remote repository ส่วนผู้ใช้งาน Git จะมี repository ที่อยู่บนเครื่องคอมพิวเตอร์ส่วนตัว ซึ่งจะเรียกว่า local repository
+
+# การใช้งาน GitHub ร่วมกับ RStudio
+
+การทำงานบน R หลายโปรเจคที่ใช้ระยะเวลาในการดำเนินงาน และหลายโปรเจคอาจจะต้องมีการบริหารจัดการ ปรับปรุงหรือดูแลระหว่างที่โปรเจคนั้นดำเนินงานอยู่ กรณีเช่นนี้อยู่ใช้ R อาจต้องการบันทึกและกำกับติดตามโปรเจคโดยใช้ GitHub เนื้อหาส่วนนี้แสดงการสร้างและเชื่อมต่อ repository บน GitHub กับ R project ที่สร้างบน RStudio รายละเอียดมีดังนี้
+
+## 1. สร้าง GitHub repository
+
+ผู้ใช้จำเป็นต้องมี GitHub account ก่อน จากนั้นคลิกที่ปุ่ม ![](images/image-577434003.png){width="10%"} เพื่อสร้าง repository ใหม่สำหรับเก็บไฟล์งานใน R project เมื่อสร้างเสร็จแล้วจะได้ repository ดังรูป
+
+![](images/image-1511933830.png)
+
+## 2. สร้าง project ที่เชื่อมต่อกับ GitHub ใน Rstudio
+
+กรณีนี้อาจจำแนกเป็น 2 กรณี กรณีแรกคือสร้าง project ใหม่ตั้งแต่ต้น และกรณีที่สองคือเชื่อมต่อ project เดิมที่มีอยู่ในเครื่องคอมพิวเตอร์แล้ว รายละเอียดมีดังนี้
+
+### กรณี 1 : สร้าง project ใหม่ตั้งแต่ต้น
