เขียน power analysis

--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@ title: "Educational Data Science"
 listing:
   contents: posts
   sort: "date desc"
-  type: grid
+  type: table
   categories: true
   sort-ui: true
   filter-ui: true
